--- a/index.html
+++ b/index.html
@@ -1,56 +1,57 @@
+
+
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
-    <link href="src/output.css" rel="stylesheet" />
-    <link rel="stylesheet" href="src/input.css" />
-    <link rel="icon" type="image/x-icon" href="images/clouds-and-sun.png" />
-  </head>
-  <body class="bg-gray-900 flex items-center justify-center h-screen">
-    <div class="card w-100 text-white rounded-3xl text-center py-10 px-9">
-      <div class="search-box flex items-center justify-between w-full border-0">
-        <input
-          type="text"
-          placeholder="Type City Name"
-          spellcheck="false"
-          class="search focus:outline-none py-3 px-5 h-16 rounded-3xl mr-4 flex-1 text-lg font-medium text-gray-700"
-        />
-        <button
-          class="search-btn rounded-full bg-white w-14 h-14 flex justify-center items-center"
-        >
-          <img src="images/search.png" class="w-6" />
-        </button>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Weather App</title>
+  <link href="src/output.css" rel="stylesheet" />
+  <link rel="stylesheet" href="src/input.css" />
+  <link rel="icon" type="image/x-icon" href="images/clouds-and-sun.png" />
+</head>
+<body class="bg-gray-900 flex items-center justify-center min-h-screen ">
+  <div class="card max-w-md w-full text-white rounded-3xl text-center py-10 px-9 xs:w-11/12">
+    <div class="search-box flex items-center justify-between w-full border-0">
+      <input
+        type="text"
+        placeholder="Type City Name"
+        spellcheck="false"
+        class="search focus:outline-none py-3 px-5 h-16 rounded-3xl mr-4 flex-1 text-lg font-medium text-gray-700 xs:w-11"
+      />
+      <button
+        class="search-btn rounded-full bg-white w-14 h-14 flex justify-center items-center"
+      >
+        <img src="images/search.png" class="w-6 xs:w-5" />
+      </button>
+    </div>
+    <div class="weather hidden flex-col items-center w-full mt-8">
+      <div class="spinner-container">
+        <div class="spinner"></div>
       </div>
-      <div class="weather hidden flex-col items-center">
-        <div class="spinner-container">
-          <div class="spinner"></div>
-        </div>
-        <img src="images/clear.png" class="w-40 w-icon">
-        <h1 class="temp text-5xl font-semibold font-sans"></h1>
-        <h2 class="city text-4xl font-sans mt-4"></h2>
-        <div class="details flex justify-between items-center w-full mt-10">
-          <div class="col flex  items-center text-left">
-            <img src="images/humidity.png" class="w-12 mr-4">
-            <div>
-              <p class="humidity text-2xl font-sans font-medium"></p>
-              <p class="font-sans capitalize">humidity</p>
-            </div>
+      <img src="images/clear.png" class="w-40 w-icon xs:w-28">
+      <h1 class="temp text-5xl font-semibold font-sans xs:text-4xl"></h1>
+      <h2 class="city text-4xl font-sans mt-4 xs:text-4xl"></h2>
+      <div class="details flex justify-between items-center w-full mt-10 flex-wrap">
+        <div class="col flex  items-center text-left mb-4 md:mb-0">
+          <img src="images/humidity.png" class="w-12 mr-4">
+          <div>
+            <p class="humidity text-2xl font-sans font-medium"></p>
+            <p class="font-sans capitalize">humidity</p>
           </div>
-          <div class="col flex items-center text-left">
-            <img src="images/wind.png" class="w-12 mr-4">
-            <div>
-              <p class="wind text-2xl font-sans font-medium "></p>
-              <p class="font-sans capitalize">wind speed</p>
-            </div>
+        </div>
+        <div class="col flex items-center text-left">
+          <img src="images/wind.png" class="w-12 mr-4">
+          <div>
+            <p class="wind text-2xl font-sans font-medium "></p>
+            <p class="font-sans capitalize">wind speed</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
-
-!
