--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <link rel="stylesheet" href="src/input.css" />
   <link rel="icon" type="image/x-icon" href="images/clouds-and-sun.png" />
 </head>
-<body class="bg-gray-900 flex items-center justify-center min-h-screen ">
+<body class="bg-gray-900">
+  <h1 class="Name text-6xl text-center mt-16 text-white font-sans font-medium xs:text-4xl sm:text-6xl">Weather <span>App</span></h1>
+  <div class="flex items-center justify-center min-h-1">
   <div class="card max-w-md w-full text-white rounded-3xl text-center py-10 px-9 xs:w-11/12">
     <div class="search-box flex items-center justify-between w-full border-0">
       <input
@@ -51,6 +53,7 @@
       </div>
     </div>
   </div>
+</div>
 
   <script src="script.js"></script>
 </body>
